Fine details on mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
     <!-- JS -->
     <script>
 
-      let circle = document.getElementById('circle');
-
-      const onMouseMove = (e) =>{
-        circle.style.left = e.pageX + 'px';
-        circle.style.top = e.pageY + 'px';
-      }
-
-      document.addEventListener('mousemove', onMouseMove);
-
       /* Open */
       function openNav() {
         document.getElementById("myNav").style.height = "100%";
@@ -80,7 +71,7 @@
             </ul>
           </div>
           <div class="navbar-menu-mobile" onclick="openNav()">
-            <a class="link" >NAVIGATION</a>
+
             <a><img src="images/menu.svg"></a>
           </div>
         </div>
@@ -105,8 +96,6 @@
       </div>
     </div>
 
-    <div id="circle"></div>
-
     <!-- ============================================ -->
     <!--                   LANDING                    -->
     <!-- ============================================ -->
@@ -124,7 +113,7 @@
           </div>
           <p>
             No page builders or WordPress necessary - We offer hand-coded
-            websites with superior results from $150/mo.
+            websites with superior results from $200/mo.
           </p>
         </div>
         <div class="left-section-mobile">
@@ -138,7 +127,7 @@
           </div>
           <p>
             No page builders or WordPress necessary - We offer hand-coded
-            websites with superior results from $150/mo.
+            websites with superior results from $200/mo.
           </p>
         </div>
         <div class="right-section">
@@ -377,8 +366,7 @@
             <div class="pricing-box">
               <div class="pricing-title">Citations And Listings</div>
               <p>
-                It's important to have your website linked from other websites,
-                like directories.
+                It's important to have your website linked from other websites.
               </p>
               <hr />
             </div>
@@ -395,8 +383,7 @@
             <div class="pricing-box">
               <div class="pricing-title">Google Analytics</div>
               <p>
-                We install Analytics for free to monitor traffic and where it
-                comes from.
+                We install Analytics for free to monitor traffic.
               </p>
               <hr />
             </div>
@@ -532,7 +519,7 @@
           <p>
             Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
           </p>
-          <span id="circle" class="circle"></span>
+
     
           <div class="footer-services">
             <div class="footer-services-section">
