--- a/blog.html
+++ b/blog.html
@@ -139,23 +139,23 @@
           <div class="categories">
             <div class="header">CATEGORIES</div>
             <div class="category-element">
-              <img src="images/blog_news.svg"/>
+              <img src="images/news-icon.svg"/>
               <div class="category-header">News</div>
             </div>
             <div class="category-element">
-              <img src="images/blog_pm.svg"/>
+              <img src="images/project-management-icon.svg"/>
               <div class="category-header">Project Management</div>
             </div>
             <div class="category-element">
-              <img src="images/blog_design.svg"/>
+              <img src="images/design-icon.svg"/>
               <div class="category-header">Design</div>
             </div>
             <div class="category-element">
-              <img src="images/blog_development.svg"/>
+              <img src="images/development-icon.svg"/>
               <div class="category-header">Development</div>
             </div>
             <div class="category-element">
-              <img src="images/blog_all.svg"/>
+              <img src="images/all-icon.svg"/>
               <div class="category-header">All</div>
             </div>
           </div>
@@ -163,7 +163,7 @@
         <div class="right-section">
           <div class="blog-page-element">
             <div class="left">
-              <div class="icon"><img src="images/blog_development.svg"/></div>
+              <div class="icon"><img src="images/development-icon.svg"/></div>
             </div>
             <div class="right">
               <div class="sub-header">11.22.2022  Bryan Moore</div>
@@ -175,7 +175,7 @@
           </div>
           <div class="blog-page-element">
             <div class="left">
-              <div class="icon"><img src="images/blog_design.svg"/></div>
+              <div class="icon"><img src="images/design-icon.svg"/></div>
             </div>
             <div class="right">
               <div class="sub-header">11.22.2022  Bryan Moore</div>
@@ -187,7 +187,7 @@
           </div>
           <div class="blog-page-element">
             <div class="left">
-              <div class="icon"><img src="images/blog_pm.svg"/></div>
+              <div class="icon"><img src="images/project-management-icon.svg"/></div>
             </div>
             <div class="right">
               <div class="sub-header">11.22.2022  Bryan Moore</div>
@@ -199,7 +199,7 @@
           </div>
           <div class="blog-page-element">
             <div class="left">
-              <div class="icon"><img src="images/blog_pm.svg"/></div>
+              <div class="icon"><img src="images/project-management-icon.svg"/></div>
             </div>
             <div class="right">
               <div class="sub-header">11.22.2022  Bryan Moore</div>
@@ -211,7 +211,7 @@
           </div>
           <div class="blog-page-element">
             <div class="left">
-              <div class="icon"><img src="images/blog_development.svg"/></div>
+              <div class="icon"><img src="images/development-icon.svg"/></div>
             </div>
             <div class="right">
               <div class="sub-header">11.22.2022  Bryan Moore</div>
