More SVG Animation

--- a/services.html
+++ b/services.html
@@ -111,7 +111,7 @@
           <img
             class="light"
             decoding="async"
-            src="/images/SEO_Isometric.svg"
+            src="/images/seo_isometric_animated.svg"
             alt=""
             aria-hidden="true"
             width="105%"
