Finished landing svg animations

--- a/blog.html
+++ b/blog.html
@@ -112,7 +112,7 @@
           <img
             class="light"
             decoding="async"
-            src="/images/Team presentation _Isometric.svg"
+            src="/images/Team presentation_Isometric_Animated.svg"
             alt=""
             aria-hidden="true"
             width="105%"
