--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
           <p>
             We pride ourselves in being fully transparent. We are clear on every step we take, and you will always be involved in all business decisions.
           </p>
-          <img src="images/Full Inbox _Isometric.svg"/>
+          <img src="images/Full Inbox _Isometric_Animated.svg"/>
         </div>
         <div class="right-section">
           <div class="container">
