--- a/about.html
+++ b/about.html
@@ -45,14 +45,19 @@
             <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
-            <ul>
-              <li><a class="link" href="about.html">ABOUT</a></li>
-              <li><a class="link" href="services.html">SERVICES</a></li>
-              <li><a class="link" href="blog.html">BLOG</a></li>
-              <li><a class="link" href="contact.html">CONTACT</a></li>
-            </ul>
+            <div class="cl-effect-5">
+              <nav class="cl-effect-5">
+              <a href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
+              <a href="services.html"><span data-hover="WORK">WORK</span></a>
+              <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+              <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+              <a class="link" id="contact" href="contact.html">CONTACT US</a>
+              </nav>
+            </div>
+          </div>
           </div>
           <div class="navbar-menu-mobile" onclick="openNav()">
+            <a class="link" >NAVIGATION</a>
             <a><img src="images/menu.svg"></a>
           </div>
         </div>
