--- a/services.html
+++ b/services.html
@@ -42,12 +42,16 @@
             <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
-            <ul>
-              <li><a class="link" href="about.html">ABOUT</a></li>
-              <li><a class="link" href="services.html">SERVICES</a></li>
-              <li><a class="link" href="blog.html">BLOG</a></li>
-              <li><a class="link" href="contact.html">CONTACT</a></li>
-            </ul>
+            <div class="cl-effect-5">
+              <nav class="cl-effect-5">
+              <a href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
+              <a href="services.html"><span data-hover="WORK">WORK</span></a>
+              <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+              <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+              <a class="link" id="contact" href="contact.html">CONTACT US</a>
+              </nav>
+            </div>
+          </div>
           </div>
           <div class="navbar-menu-mobile" onclick="openNav()">
             <a class="link" >NAVIGATION</a>
@@ -330,7 +334,9 @@
     <footer id="footer">
       <div class="container">
         <div class="left-section">
+          <!--
           <div class="header">RAIN CITY WEBSITES</div>
+          -->
           <p>
             Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
           </p>
@@ -343,16 +349,20 @@
             <div class="footer-menu-link"><a href="blog.html">BLOG</a></div>
             <div class="footer-menu-link"><a href="contact.html">CONTACT</a></div>
           </div>
-          <label>Join Our Newsletter!</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Email Address"
-          />
+          
+          <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
+          
         </div>
         <div class="right-section">
-          <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
+          <div class="email-form">
+            <label>Subscribe to the Rain City Newsletter!</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Email Address"
+            />
+          </div>
           <p>
             Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
           </p>
