--- a/contact.html
+++ b/contact.html
@@ -27,23 +27,27 @@
         <div class="navbar">
           <div class="navbar-navigation">
             <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
-            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
+            <a href="index.html"><span id="blue">RAIN </span> CITY</a>
           </div>
           <div class="navbar-menu">
             <div class="cl-effect-5">
               <nav class="cl-effect-5">
-              <a href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
-              <a href="services.html"><span data-hover="WORK">WORK</span></a>
-              <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
-              <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
-              <a class="link" id="contact" href="contact.html">CONTACT US</a>
+                <a href="services.html"
+                  ><span data-hover="SERVICES">SERVICES</span></a
+                >
+                <a href="services.html"><span data-hover="WORK">WORK</span></a>
+                <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+                <a href="blog.html"
+                  ><span data-hover="INSIGHTS">INSIGHTS</span></a
+                >
+                <a class="link" id="contact" href="contact.html">CONTACT US</a>
               </nav>
             </div>
           </div>
-          </div>
+
           <div class="navbar-menu-mobile" onclick="openNav()">
-            <a class="link" >NAVIGATION</a>
-            <a><img src="images/menu.svg"></a>
+            <a class="link">NAVIGATION</a>
+            <a><img src="images/menu.svg" /></a>
           </div>
         </div>
       </nav>
