--- a/contact.html
+++ b/contact.html
@@ -113,18 +113,14 @@
           </p>
           <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
 
-          <div class="footer-menu">
-            <div class="footer-menu-link"><a href="about.html">ABOUT</a></div>
-            <div class="footer-menu-link">
-              <a href="portfolio.html">PORTFOLIO</a>
-            </div>
-            <div class="footer-menu-link">
-              <a href="services.html">SERVICES</a>
-            </div>
-            <div class="footer-menu-link"><a href="blog.html">BLOG</a></div>
-            <div class="footer-menu-link">
-              <a href="contact.html">CONTACT</a>
-            </div>
+          <div class="cl-effect-5-footer">
+            <a href="services.html"
+              ><span data-hover="SERVICES">SERVICES</span></a
+            >
+            <a href="services.html"><span data-hover="WORK">WORK</span></a>
+            <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+            <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+            <a href="blog.html"><span data-hover="CONTACT">CONTACT</span></a>
           </div>
 
           <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
