Finished mouse animation

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <section id="portfolio" class="section">
       <div class="container">
         <div class="left-section">
-          <a href="services.html" class="porfolio-link">
+          <a href="services.html" class="porfolio-link" id="mouse-link">
             <div class="title">CAKE CANNABIS</div>
             <div class="description">
               We focus on digital design, strategic marketing, and all things
@@ -233,7 +233,7 @@
           </a>
         </div>
         <div class="middle-section">
-          <a href="services.html" class="porfolio-link">
+          <a href="services.html" class="porfolio-link" id="mouse-link">
             <div class="title">RONDO'S LIFE COACHING</div>
             <div class="description">
               We focus on digital design, strategic marketing, and all things
@@ -256,7 +256,7 @@
         </div>
 
         <div class="right-section">
-          <a href="services.html" class="porfolio-link">
+          <a href="services.html" class="porfolio-link" id="mouse-link">
             <div class="title">MASSAGE WEBSITE</div>
             <div class="description">
               We focus on digital design, strategic marketing, and all things
@@ -422,7 +422,7 @@
 
     <section id="blog" class="section">
       <div class="container">
-        <a href="services.html" class="blog-element">
+        <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             11.12.2022
           </div>
@@ -434,7 +434,7 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element">
+        <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             11.12.2022
           </div>
@@ -446,7 +446,7 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element">
+        <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             11.12.2022
           </div>
@@ -458,7 +458,7 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element">
+        <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             11.12.2022
           </div>
@@ -470,7 +470,7 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element">
+        <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             11.12.2022
           </div>
@@ -482,7 +482,7 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element">
+        <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             11.12.2022
           </div>
@@ -592,7 +592,7 @@
     <script>
       /* cursor */
       let mouseCursor = document.querySelector(".cursor");
-      let navLinks = document.querySelectorAll('a')
+      let navLinks = document.querySelectorAll('#mouse-link')
       
       
       window.addEventListener("mousemove", cursor);
