--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
     <title>Rain City Websites</title>
 
     <!-- JS -->
+
+    <script type="text/javascript"  src="main.js"></script>
     <script>
       /* Open */
       function openNav() {
@@ -32,6 +34,8 @@
     <title>Rain City Websites</title>
   </head>
   <body>
+
+
     <!-- ============================================ -->
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
