--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="/css/local.css" />
 
     <!-- JS -->
-    <script src="circletype.min.js"></script>
+    <script type="text/javascript"  src="main.js"></script>
+
     <script>
 
       /* Open */
@@ -53,6 +54,8 @@
     <title>Rain City Websites</title>
   </head>
   <body>
+    
+    <!--  <div class="transition transition-3 is-active"></div> -->
     <!-- ============================================ -->
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
@@ -68,11 +71,11 @@
           <div class="navbar-menu">
             <div class="cl-effect-5">
               <nav class="cl-effect-5">
-                <a href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
-                <a href="services.html"><span data-hover="WORK">WORK</span></a>
-                <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
-                <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
-                <a class="link" id="contact" href="contact.html">CONTACT US</a>
+                <a  href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
+                <a  href="services.html"><span data-hover="WORK">WORK</span></a>
+                <a  href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+                <a  href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+                <a  id="contact" href="contact.html">CONTACT US</a>
               </nav>
             </div>
             
