--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/root.css" type="text/css" />
     <link rel="stylesheet" href="/css/services.css" />
     <!-- JS -->
+    <script type="text/javascript"  src="main.js"></script>
     <script>
       /* Open */
       function openNav() {
@@ -29,6 +30,8 @@
     <title>Rain City Websites</title>
   </head>
   <body>
+
+    <!--  <div class="transition transition-3 is-active"></div> -->
     <!-- ============================================ -->
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
