--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="/css/blog.css" />
 
     <!-- JS -->
+
+    <script type="text/javascript"  src="main.js"></script>
     <script>
       /* Open */
       function openNav() {
@@ -30,6 +32,7 @@
     <title>Rain City Websites</title>
   </head>
   <body>
+
     <!-- ============================================ -->
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
