--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="/css/contact.css" />
 
     <title>Rain City Websites</title>
+
+    <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
     <!-- ============================================ -->
