Added more page load animations

--- a/about.html
+++ b/about.html
@@ -94,13 +94,20 @@
     <section id="hero">
       <div class="container">
         <div class="left-section">
-          <div class="hero-header">
-            OUR MISSION:
-          </div><div class="hero-header">
-            GROW YOUR
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              OUR MISSION:
+            </div>
           </div>
-          <div class="hero-header">
-            BUSINESS
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              GROW YOUR
+            </div>
+          </div>
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              BUSINESS
+            </div>
           </div>
           <p>
             We are a small team of dedicated software developers that are committed to delivering world class websites for small businesses.
