--- a/blog.html
+++ b/blog.html
@@ -90,13 +90,20 @@
     <section id="hero">
       <div class="container">
         <div class="left-section">
-          <div class="hero-header">
-            CONSISTENTLY
-          </div><div class="hero-header">
-            PUSHING THE 
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              CONSISTENTLY
+            </div>
           </div>
-          <div class="hero-header">
-            ENVELOPE
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              PUSHING THE  
+            </div>
+          </div>
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              ENVELOPE
+            </div>
           </div>
           <p>
             Scaling your business through a data driven approach is what we specialize in.  Explore our different services below to see if we’d be a great fit for your company.
