--- a/index.html
+++ b/index.html
@@ -123,18 +123,26 @@
     <section id="hero">
       <div class="container">
         <div class="left-section">
-          <div class="hero-header">
-            SMALL BUSINESS
-          </div><div class="hero-header">
-            WEB DESIGN AND 
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              SMALL BUSINESS
+            </div>
           </div>
-          <div class="hero-header">
-            DEVELOPMENT
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              WEB DESIGN AND 
+            </div>
           </div>
-          <p>
-            No page builders or WordPress necessary - We offer hand-coded
-            websites with superior results from $200/mo.
-          </p>
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              DEVELOPMENT
+            </div>
+          </div>
+            <p>
+              No page builders or WordPress necessary - We offer hand-coded
+              websites with superior results from $200/mo.
+            </p>
+          
         </div>
         <div class="left-section-mobile">
           <div class="hero-header">
