--- a/services.html
+++ b/services.html
@@ -89,13 +89,20 @@
     <section id="hero">
       <div class="container">
         <div class="left-section">
-          <div class="hero-header">
-            RAISING THE
-          </div><div class="hero-header">
-            STANDARD FOR
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              RAISING THE
+            </div>
           </div>
-          <div class="hero-header">
-            TECH SOLUTIONS
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              STANDARD FOR 
+            </div>
+          </div>
+          <div class="hero-animation">
+            <div class="hero-header hero-transition">
+              TECH SOLUTIONS
+            </div>
           </div>
           <p>
             Scaling your business through a data driven approach is what we specialize in.  Explore our different services below to see if we’d be a great fit for your company.
