More landing page animations

--- a/index.html
+++ b/index.html
@@ -138,12 +138,19 @@
               DEVELOPMENT
             </div>
           </div>
-            <p>
+          <br>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
               No page builders or WordPress necessary - We offer hand-coded
+            </p>
+          </div>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
               websites with superior results from $200/mo.
             </p>
-          
+          </div>
         </div>
+
         <div class="left-section-mobile">
           <div class="hero-header">
             SMALL BUSINESS
