More loading animations

--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
         <div class="navbar">
           <div class="navbar-navigation">
             <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
-            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
+            <a class="navbar-transition" href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <div class="cl-effect-5">
               <nav class="cl-effect-5">
-                <a  href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
-                <a  href="services.html"><span data-hover="WORK">WORK</span></a>
-                <a  href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
-                <a  href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
-                <a  id="contact" href="contact.html">CONTACT US</a>
+                <a class="navbar-transition" href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
+                <a class="navbar-transition" href="services.html"><span data-hover="WORK">WORK</span></a>
+                <a class="navbar-transition" href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+                <a class="navbar-transition" href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+                <a class="navbar-transition" id="contact" href="contact.html">CONTACT</a>
               </nav>
             </div>
             
