--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   </head>
   <body>
 
-
+    <div class="navbar-overlay-animation is-active"></div>
     <!-- ============================================ -->
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
@@ -43,23 +43,33 @@
     <header>
       <!-- Normal Nav -->
       <nav>
+        
         <div class="navbar">
           <div class="navbar-navigation">
             <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
-            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
+            <a class="navbar-transition" href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <div class="cl-effect-5">
               <nav class="cl-effect-5">
-              <a href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
-              <a href="services.html"><span data-hover="WORK">WORK</span></a>
-              <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
-              <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
-              <a class="link" id="contact" href="contact.html">CONTACT US</a>
+                <a class="navbar-transition" href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
+                <a class="navbar-transition" href="services.html"><span data-hover="WORK">WORK</span></a>
+                <a class="navbar-transition" href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+                <a class="navbar-transition" href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+                <a class="navbar-transition" id="contact" href="contact.html">CONTACT</a>
               </nav>
             </div>
+            
+            <!--
+            <ul>
+              <li><a href="services.html"><span data-hover="SERVICES">SERVICES</span></a></li>
+              <li><a class="flip-animate" href="services.html"><span data-hover="WORK">WORK</span></a></li>
+              <li><a class="flip-animate" href="about.html"><span data-hover="ABOUT">ABOUT</span></a></li>
+              <li><a class="flip-animate" href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a></li>
+              <li><a class="link" id="contact" href="contact.html">CONTACT US</a></li>
+            </ul>
+            -->
           </div>
-
           <div class="navbar-menu-mobile" onclick="openNav()">
             <a class="link" >NAVIGATION</a>
             <a><img src="images/menu.svg"></a>
@@ -109,9 +119,17 @@
               BUSINESS
             </div>
           </div>
-          <p>
-            We are a small team of dedicated software developers that are committed to delivering world class websites for small businesses.
-          </p>
+          <br>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
+              We are a small team of dedicated software developers that are
+            </p>
+          </div>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
+              committed to delivering world class websites for small businesses.
+            </p>
+          </div>
         </div>
         <div class="left-section-mobile">
           <div class="hero-header">
@@ -142,6 +160,7 @@
     <!-- ============================================ -->
     <!--                   ABOUT                      -->
     <!-- ============================================ -->
+    <div class="navbar-overlay-animation2 is-active"></div>
 
     <div id="section-title">
       <div class="container">
