--- a/services.html
+++ b/services.html
@@ -32,6 +32,7 @@
   <body>
 
     <!--  <div class="transition transition-3 is-active"></div> -->
+    <div class="navbar-overlay-animation is-active"></div>
     <!-- ============================================ -->
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
@@ -39,23 +40,33 @@
     <header>
       <!-- Normal Nav -->
       <nav>
+        
         <div class="navbar">
           <div class="navbar-navigation">
             <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
-            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
+            <a class="navbar-transition" href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <div class="cl-effect-5">
               <nav class="cl-effect-5">
-              <a href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
-              <a href="services.html"><span data-hover="WORK">WORK</span></a>
-              <a href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
-              <a href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
-              <a class="link" id="contact" href="contact.html">CONTACT US</a>
+                <a class="navbar-transition" href="services.html"><span data-hover="SERVICES">SERVICES</span></a>
+                <a class="navbar-transition" href="services.html"><span data-hover="WORK">WORK</span></a>
+                <a class="navbar-transition" href="about.html"><span data-hover="ABOUT">ABOUT</span></a>
+                <a class="navbar-transition" href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a>
+                <a class="navbar-transition" id="contact" href="contact.html">CONTACT</a>
               </nav>
             </div>
+            
+            <!--
+            <ul>
+              <li><a href="services.html"><span data-hover="SERVICES">SERVICES</span></a></li>
+              <li><a class="flip-animate" href="services.html"><span data-hover="WORK">WORK</span></a></li>
+              <li><a class="flip-animate" href="about.html"><span data-hover="ABOUT">ABOUT</span></a></li>
+              <li><a class="flip-animate" href="blog.html"><span data-hover="INSIGHTS">INSIGHTS</span></a></li>
+              <li><a class="link" id="contact" href="contact.html">CONTACT US</a></li>
+            </ul>
+            -->
           </div>
-
           <div class="navbar-menu-mobile" onclick="openNav()">
             <a class="link" >NAVIGATION</a>
             <a><img src="images/menu.svg"></a>
@@ -104,9 +115,22 @@
               TECH SOLUTIONS
             </div>
           </div>
-          <p>
-            Scaling your business through a data driven approach is what we specialize in.  Explore our different services below to see if we’d be a great fit for your company.
-          </p>
+          <br>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
+              Scaling your business through a data driven approach is what we 
+            </p>
+          </div>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
+              specialize in.  Explore our different services below to see if we’d be a
+            </p>
+          </div>
+          <div class="hero-animation">
+            <p class="hero-p hero-transition">
+              great fit for your company.
+            </p>
+          </div>
         </div>
         <div class="left-section-mobile">
           <div class="hero-header">
@@ -137,7 +161,7 @@
     <!-- ============================================ -->
     <!--                   SERVICES                   -->
     <!-- ============================================ -->
-
+    <div class="navbar-overlay-animation2 is-active"></div>
     <div id="section-title">
       <div class="container">
         <div class="left-section">What We Do</div>
