Altered blog stylings on index.html for desktop

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <!--                   SERVICES                   -->
     <!-- ============================================ -->
     <div class="navbar-overlay-animation2 is-active"></div>
-    
+
     <div id="section-title">
       <div class="container">
         <div class="left-section">What We Do</div>
@@ -445,7 +445,7 @@
       <div class="container">
         <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
-            11.12.2022
+            Article
           </div>
           <div class="blog-header">
             Advantages of Developing your own Website
@@ -457,7 +457,7 @@
         </a>
         <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
-            11.12.2022
+            Insight
           </div>
           <div class="blog-header">
             Optimizing Images for the Web
@@ -469,7 +469,7 @@
         </a>
         <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
-            11.12.2022
+            Article
           </div>
           <div class="blog-header">
             How to Drive Traffic to your Website
@@ -481,7 +481,7 @@
         </a>
         <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
-            11.12.2022
+            Insight
           </div>
           <div class="blog-header">
             Benefits of a Professional Business Website
@@ -493,7 +493,7 @@
         </a>
         <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
-            11.12.2022
+            Article
           </div>
           <div class="blog-header">
             SEO Strategies for Today and Tomorrow
@@ -505,7 +505,7 @@
         </a>
         <a href="services.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
-            11.12.2022
+            Article
           </div>
           <div class="blog-header">
             Advantages of Developing your own Website
