--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
         <div class="navbar">
           <div class="navbar-navigation">
             <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
-            <a class="navbar-transition" href="index.html"><span id="blue">RAIN </span> CITY</a> 
+            <a class="navbar-transition" href="/"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <div class="cl-effect-5">
