Added remaining blog web pages and new css

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
     <section id="blog" class="section">
       <div class="container">
-        <a href="services.html" class="blog-element" id="mouse-link">
+        <a href="insights/advantages-of-developing-your-own-website.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             Article
           </div>
@@ -455,7 +455,7 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element" id="mouse-link">
+        <a href="insights/optimizing-images-for-the-web.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             Insight
           </div>
@@ -467,7 +467,7 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element" id="mouse-link">
+        <a href="insights/how-to-drive-traffic-to-your-website.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             Article
           </div>
@@ -479,36 +479,36 @@
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element" id="mouse-link">
+        <a href="insights/beginers-guide-to-google-analytics.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             Insight
           </div>
           <div class="blog-header">
-            Benefits of a Professional Business Website
+            Beginners Guide to Google Analytics
           </div>
           <div class="blog-link">
             <div class="blog-link-text">READ MORE</div>
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element" id="mouse-link">
+        <a href="insights/seo-strategies-for-small-businesses.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             Article
           </div>
           <div class="blog-header">
-            SEO Strategies for Today and Tomorrow
+            SEO Strategies for Small Businesses
           </div>
           <div class="blog-link">
             <div class="blog-link-text">READ MORE</div>
             <img src="/images/noun-arrow.svg">
           </div>
         </a>
-        <a href="services.html" class="blog-element" id="mouse-link">
+        <a href="insights/how-to-optimize-a-website-for-mobile.html" class="blog-element" id="mouse-link">
           <div class="blog-date">
             Article
           </div>
           <div class="blog-header">
-            Advantages of Developing your own Website
+            How to Optimize a Website For Mobile Devices
           </div>
           <div class="blog-link">
             <div class="blog-link-text">READ MORE</div>
