Finishing landing page

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
     </div>
 
     <!-- ============================================ -->
-    <!--                   CONTACT                    -->
+    <!--                   LANDIN                    -->
     <!-- ============================================ -->
 
     <section id="hero">
@@ -146,7 +146,31 @@
       </div>
     </section>
 
+    <section id="section-title">
+      <div class="container">
+        <div class="left-section">Get In Touch</div>
+        <div class="right-section">CONTACT</div>
+      </div>
+    </section>
+
     <div class="navbar-overlay-animation2 is-active"></div>
+
+    
+
+     <!-- ============================================ -->
+    <!--                   CONTACT                    -->
+    <!-- ============================================ -->
+
+    <section id="contact-section" class="section">
+      <div class="container">
+        <div class="left-section">
+
+        </div>
+        <div class="right-section">
+
+        </div>
+      </div>
+    </section>
 
     <section id="section-title">
       <div class="container">
