--- a/insights/advantages-of-developing-your-own-website.html
+++ b/insights/advantages-of-developing-your-own-website.html
@@ -176,21 +176,28 @@
             <div class="right">
               <div class="sub-header">11.22.2022  Bryan Moore</div>
               <div class="header">Advantages of Developing your own Website</div>
-              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              <p>
+                There are many advantages to coding your own website, rather than using a pre-made template or a website builder. Here are just a few:
               </p>
-              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              <p>
+                Increased control and customization: When you code your own website, you have complete control over every aspect of its design and functionality. This allows you to create a unique and personalized experience for your users. You can also easily make changes to your website as your needs evolve.
               </p>
-              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              <p>
+                Better performance: Websites that are coded from scratch tend to be leaner and more efficient than those built using pre-made templates or website builders. This means they will load faster and be more responsive, providing a better user experience.
               </p>
-              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              <p>
+                Enhanced security: When you code your own website, you are in control of the security measures you put in place. This can help to protect your website and your users’ data from potential security threats.
               </p>
-              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              <p>
+                Improved SEO: Search engine optimization (SEO) is crucial for ensuring that your website appears high in search engine results. When you code your own website, you can ensure that it is optimized for SEO from the ground up, helping to improve its visibility and drive more traffic to your site.
               </p>
+              <p>
+                Enhanced credibility: Coding your own website shows that you are dedicated and knowledgeable about your business. This can help to establish trust and credibility with your users, which is essential for building a successful online presence.
+              </p>
+              <p>
+                In conclusion, coding your own website can provide you with increased control, better performance, enhanced security, improved SEO, and enhanced credibility. While it may require some time and effort, the benefits of coding your own website are well worth it.
+              </p>
+              
             </div>
           </div>
           <div class="blog-page-element">
