Finished desktop portfolio section of landing page

--- a/index.html
+++ b/index.html
@@ -236,9 +236,7 @@
           <a href="services.html" class="portfolio-link" id="mouse-link">
             <div class="title">CAKE CANNABIS</div>
             <div class="description">
-              We focus on digital design, strategic marketing, and all things
-              technology to better businesses and brand experiences. We focus on digital design, strategic marketing, and all things
-              technology to better businesses and brand experiences.
+              Cake Cannabis is a celebration of Washington grown cannabis.  They source from the highest quality farms in the state, serving deisgner strains and well established industrial staples at an affordable price.
             </div>
             <div class="subtitles">
               <span>WEB DESIGN</span>
@@ -248,23 +246,28 @@
               <img
                 class="light"
                 decoding="async"
-                src="/images/portfolio1.webp"
+                src="/images/cakecannabis.png"
                 alt=""
                 aria-hidden="true"
                 width="100%"
               />
               <div class="overlay-hover">
-                <div class="text">Hello World</div>
+                <img
+                class="light"
+                decoding="async"
+                src="/images/portfolio1.webp"
+                alt=""
+                aria-hidden="true"
+              />
               </div>
             </div>
+          </a>
         </div>
         <div class="middle-section">
           <a href="services.html" class="portfolio-link" id="mouse-link">
-            <div class="title">RONDO'S LIFE COACHING</div>
+            <div class="title">LIQUID LOVE</div>
             <div class="description">
-              We focus on digital design, strategic marketing, and all things
-              technology to better businesses and brand experiences. We focus on digital design, strategic marketing, and all things
-              technology to better businesses and brand experiences.
+              Liquid Love is a high-end cocktail bar and restaurant that offers an extensive menu of unique and delicious drinks. The atmosphere at Liquid Love is chic and sophisticated, making it the perfect spot for a date or special occasion.
             </div>
             <div class="subtitles">
               <span>WEB DESIGN</span>
@@ -274,13 +277,19 @@
               <img
               class="light"
               decoding="async"
-              src="/images/portfolio2.webp"
+              src="/images/liquidlove.jpg"
               alt=""
               aria-hidden="true"
               width="100%"
             />
               <div class="overlay-hover">
-                <div class="text">Hello World</div>
+                <img
+              class="light"
+              decoding="async"
+              src="/images/portfolio2.webp"
+              alt=""
+              aria-hidden="true"
+            />
               </div>
             </div>
             
@@ -289,11 +298,9 @@
 
         <div class="right-section">
           <a href="services.html" class="portfolio-link" id="mouse-link">
-            <div class="title">MASSAGE WEBSITE</div>
+            <div class="title">BISTRO CLEMENTINE</div>
             <div class="description">
-              We focus on digital design, strategic marketing, and all things
-              technology to better businesses and brand experiences.  We focus on digital design, strategic marketing, and all things
-              technology to better businesses and brand experiences.
+              Bistro Clementine is a luxurious wine and Italian restaurant that offers a fine dining experience like no other. The restaurant's menu features an array of delicious Italian dishes, each expertly crafted using the freshest ingredients.
             </div>
             <div class="subtitles">
               <span>WEB DESIGN</span>
@@ -304,13 +311,19 @@
               <img
               class="light"
               decoding="async"
-              src="/images/portfolio3.webp"
+              src="/images/bistroClementine.jpg"
               alt=""
               aria-hidden="true"
               width="100%"
             />
               <div class="overlay-hover">
-                <div class="text">Hello World</div>
+                <img
+              class="light"
+              decoding="async"
+              src="/images/portfolio3.webp"
+              alt=""
+              aria-hidden="true"
+            />
               </div>
             </div>
           </a>
