--- a/index.html
+++ b/index.html
@@ -143,12 +143,7 @@
           <br>
           <div class="hero-animation">
             <p class="hero-p hero-transition">
-              No page builders or WordPress necessary - We offer hand-coded
-            </p>
-          </div>
-          <div class="hero-animation">
-            <p class="hero-p hero-transition">
-              websites with superior results from $200/mo.
+              No page builders or WordPress necessary - We offer hand-coded websites with superior results from $200/mo.
             </p>
           </div>
         </div>
@@ -172,12 +167,7 @@
           <br>
           <div class="hero-animation">
             <p class="hero-p hero-transition">
-              No page builders or WordPress necessary - We offer
-            </p>
-          </div>
-          <div class="hero-animation">
-            <p class="hero-p hero-transition">
-              hand-coded websites with superior results from $200/mo.
+              No page builders or WordPress necessary - We offer hand-coded websites with superior results from $200/mo.
             </p>
           </div>
         </div>
