--- a/index.html
+++ b/index.html
@@ -166,10 +166,20 @@
           </div>
         </div>
         <div class="right-section">
+          <!--
           <img
             class="light"
             decoding="async"
             src="/images/animated_landing_hero.svg"
+            alt=""
+            aria-hidden="true"
+            width="105%"
+          />
+          -->
+          <img
+            class="light"
+            decoding="async"
+            src="/images/pp.svg"
             alt=""
             aria-hidden="true"
             width="105%"
